Fix: reCAPTCHA alignment + spacing on Signup Page (#679)

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -722,3 +722,10 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+ 
+
+.recaptcha-container {
+  margin: 15px 0;
+  display: flex;
+  justify-content: center;
+}
